# rocket-slogger

./: Cargo.toml  README.md  TODO.md
.github/workflows/: rust-lints.yaml
docs/superpowers/plans/: 2026-06-23-route-log-filtering.md
docs/superpowers/specs/: 2026-06-23-route-log-filtering-design.md
examples/: bunyan-callbacks-features.rs  filtering.rs
src/: fairing.rs  filter.rs  from_request.rs  lib.rs  response_log.rs  transaction.rs
tests/: callbacks.rs  filtering.rs  request_id_header.rs  response_log.rs
