[package]
name = "rocket-slogger"
version = "1.1.0"
authors = ["Jenifer Champagne <jen@iferc.ca>"]
edition = "2021"
description = """
Middleware (fairing) for Rocket.rs 0.5 web servers to have integrated slog logging of request activity
"""
repository = "https://github.com/iferc/rocket-slogger"
keywords = ["rocket", "slog", "slogger", "logging", "middleware"]
license = "MIT OR Apache-2.0"
readme = "./README.md"
exclude = [".github", "examples"]

[[example]]
name = "bunyan"
path = "examples/bunyan.rs"

[[example]]
name = "bunyan-feature"
path = "examples/bunyan-feature.rs"

[[example]]
name = "bunyan-callbacks-features"
path = "examples/bunyan-callbacks-features.rs"

[[example]]
name = "terminal"
path = "examples/terminal.rs"

[[example]]
name = "terminal-feature"
path = "examples/terminal-feature.rs"

[[example]]
name = "filtering"
path = "examples/filtering.rs"

[dependencies]
rocket = "0.5"
slog = "2.8"
slog-envlogger = { version = "2.2", optional = true }
slog-term = { version = "2.9", optional = true }
slog-bunyan = { version = "2.5", optional = true }
chrono = { version = "0.4", optional = true }
uuid = { version = "1.23", features = ["v4"], optional = true }

[dev-dependencies]
slog-term = "2.9"
slog-bunyan = "2.5"

[features]
# No optional functionality. Pair with an output feature (`terminal` or
# `bunyan`), or supply your own slog `Logger` via `Slogger::from_logger`.
default = []

# Attach async on_request/on_response hooks that can enrich the logger with
# extra fields before each log line is written.
callbacks = []

# Per-request UTC timestamp, a UUID that correlates every log line from a single
# request, and the total elapsed request-to-response time on the response log.
transactions = ["chrono", "uuid"]
# Opt-in `X-Request-Id` response header carrying the transaction id, set via
# `.with_request_id_header()`. Kept separate so plain `transactions` logging
# never compiles in response-mutating code. Requires `transactions`, which
# provides the id (enforced via compile_error).
transaction_header = []
# Render the transaction's received time in the system local zone instead of
# UTC. Only meaningful alongside `transactions`.
local_time = []

# Enable `Slogger::new_terminal_logger()` for plain-text stdout output.
terminal = ["slog-term"]
# Enable `Slogger::new_bunyan_logger()` for bunyan-style JSON output.
bunyan = ["slog-bunyan"]
# Honour the `RUST_LOG` env var to set output levels at runtime. Defaults to
# showing only warn and error when enabled.
envlogger = ["slog-envlogger"]

# Compile-time maximum log level: any statement above the named level is removed
# at build time with zero runtime cost. The `max_level_*` set applies to all
# builds; the `release_max_level_*` set applies only to release builds. These
# pass straight through to the matching slog features.
max_level_off = ["slog/max_level_off"]
max_level_error = ["slog/max_level_error"]
max_level_warn = ["slog/max_level_warn"]
max_level_info = ["slog/max_level_info"]
max_level_debug = ["slog/max_level_debug"]
max_level_trace = ["slog/max_level_trace"]
release_max_level_off = ["slog/release_max_level_off"]
release_max_level_error = ["slog/release_max_level_error"]
release_max_level_warn = ["slog/release_max_level_warn"]
release_max_level_info = ["slog/release_max_level_info"]
release_max_level_debug = ["slog/release_max_level_debug"]
release_max_level_trace = ["slog/release_max_level_trace"]

[package.metadata.docs.rs]
all-features = true
